WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52330
Detect, identify and recover from WebProcess crashes in run-webkit-tests
https://bugs.webkit.org/show_bug.cgi?id=52330
Summary
Detect, identify and recover from WebProcess crashes in run-webkit-tests
Maciej Stachowiak
Reported
2011-01-12 15:42:21 PST
Detect, identify and recover from WebProcess crashes in run-webkit-tests
Attachments
Patch
(6.51 KB, patch)
2011-01-12 15:47 PST
,
Maciej Stachowiak
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Maciej Stachowiak
Comment 1
2011-01-12 15:47:12 PST
Created
attachment 78749
[details]
Patch
Maciej Stachowiak
Comment 2
2011-01-12 16:23:01 PST
Committed
r75655
: <
http://trac.webkit.org/changeset/75655
>
WebKit Review Bot
Comment 3
2011-01-12 17:26:16 PST
http://trac.webkit.org/changeset/75655
might have broken Leopard Intel Debug (Tests)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug