2011-01-12  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Sam Weinig.

        Detect, identify and recover from WebProcess crashes in run-webkit-tests
        https://bugs.webkit.org/show_bug.cgi?id=52330

        * Scripts/old-run-webkit-tests: Detect when the regression test tool reports
        a web process crash.
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::initialize): Set up a processDidCrash
        callback.
        (WTR::TestController::processDidCrash): Report that the Web process
        crashed.
        * WebKitTestRunner/TestController.h:


Canonical link: https://commits.webkit.org/65943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75655 268f45cc-cd09-0410-ab3c-d52691b4dbfc